# libsecret-cli

./: .gitignore  README.md  configure.ac
src/: Makefile.am  list-collections.c  list-collections.h  main.c  options.h
